Parsing of the cost tables as seperate table

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,139 @@
 .Rproj.user
 .Rhistory
 .RData
+/#AnalyzeGroups.R#
+/#CheckVariables.R#
+/#Consultations.rnw#
+/.#CheckVariables.R
+/.#Consultations.rnw
+/.~lock.TableCheck.csv#
+/Analysis.pdf/
+/AnalyzeCost.html
+/AnalyzeCost.log
+/Constants/#ColNames3.csv#
+/Constants/#Q3_HealthAccess.txt#
+/Constants/.#ColNames3.csv
+/Constants/.#Q3_HealthAccess.txt
+/Constants/.~lock.Codes.csv#
+/Constants/.~lock.ColNames.csv#
+/Constants/.~lock.Q4Names.csv#
+/Constants/ColNames.csv~
+/Constants/ColNames2.csv
+/Constants/ColNames3.csv
+/Constants/PossesionValues.csv~
+/Constants/Q4.r~
+/ConsultationTotals
+/Consultations-Distributions.pdf
+/Consultations-answer_hist.pdf
+/Consultations-consultation_histo.pdf
+/Consultations.Rmd
+/Consultations.Rmd~
+/Consultations.aux
+/Consultations.html
+/Consultations.md
+/Consultations.rnw~
+/Consultations.tex
+/Consultations[woven].md
+/Consultations[woven].md
+/Consultations[woven].md
+/DemoGraphicsTable.log
+/DemodTable.log
+/Demographics.csv
+/EstimationTotals.csv
+/FALSE_hist1.pdf
+/GeoID_hist1.pdf
+/GeoID_hist2.pdf
+/Markdowns/
+/Mother_TT_immun_before_or_during_pregnancy.tex
+/NoAssist_hist1.pdf
+/NoAssist_hist2.pdf
+/PaymetnsByGroup.csv
+/Plot_Cost_Histograms.Rmd
+/Plot_Cost_Histograms.html
+/PreID_hist1.pdf
+/PreID_hist2.pdf
+/PreIdAnalysis.html
+/Q4Check.csv
+/Q4_Frequncies.csv
+/Rplots.pdf
+/SmallScripts/#CreateScore.r#
+/SmallScripts/#GroupWealth.r#
+/SmallScripts/.#CreateScore.r
+/SmallScripts/.#GroupWealth.r
+/SmallScripts/1_Demographics.r~
+/SmallScripts/2_MNCH.r~
+/SmallScripts/3_Access_and_health_spending.r~
+/SmallScripts/Count_Consultation_Users.r~
+/SmallScripts/CreateScore.r~
+/SmallScripts/DefineGroups.r~
+/SmallScripts/GroupWealth.r~
+/SmallScripts/SplitCodes.r~
+/SmallScripts/Utility.r~
+/SmallScripts/texput.log
+/TRUE_hist1.pdf
+/Tables.aux
+/Tables.log
+/Test-002.pdf
+/Test-answer_hist.pdf
+/Test-concordance.tex
+/Test-consultation_histo.pdf
+/Test-fig1.pdf
+/Test-fig1plot.pdf
+/Test.aux
+/Test.log
+/Test.pdf
+/Test.rnw
+/Test.rnw~
+/Test.tex
+/Test.tex~
+/Test/
+/TestTTest.R
+/laoPov.html
+/missfont.log
+/output/ % Reporting Literature was Helpfull by Group .csv 
+/output/ % Reporting Literature was Helpfull by Group .csv 
+/output/.~lock.Q5_Frequncies.csv#
+/output/Demographics.csv
+/output/Ethnicity.csv
+/output/Have_Pregnancy_Monitoring_Card.csv
+/output/MosquitoNet.cvs
+/output/Mother_TT.csv
+/output/Mother_TT_immun_before_or_during_pregnancy.csv
+/output/NumMothers.csv
+/output/TT_Pregnancy_Card.csv
+/output/Tables.aux
+/output/Tables.log
+/output/Tables.pdf
+/output/Tables.synctex.gz
+/output/Tables.tex
+/output/Tables.tex~
+/output/texput.log
+/output/waittimes.png
+/spss.tar.gz
+/spss/
+/test-concordance.tex
+/test-fig1.pdf
+/test.aux
+/test.log
+/test.md
+/test.pdf
+/test.rmd
+/test.rnw
+/test.tex
+/test.txt
+/tex/.directory
+/tex/29.tex
+/tex/PregCard.log
+/tex/PregCard.pdf
+/tex/PregCard.synctex.gz
+/tex/PregCard.tex~
+/tex/Tables.aux
+/tex/Tables.log
+/tex/Tables.pdf
+/tex/Tables.synctex.gz
+/tex/Tables.tex~
+/tex/pdfgen.sh~
+/tex/texput.log
+/texput.log
+/Consultations[woven].md
+/output/ % Reporting Literature was Helpfull by Group .csv 
