Created InPat and OutPat saved with clean formatting Includees individual information as well as Wealth PCA
* .gitignore:

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,58 @@
 /texput.log
 /Consultations[woven].md
 /output/ % Reporting Literature was Helpfull by Group .csv 
+/*R*
+/.#OOPCross_Anlysis.rmd
+/MainAnalysis.html.tex
+/MainAnalysis.md
+/MainAnalysis.rmd.tex
+/MainAnalysis.tex
+/MainAnalysis.txt
+/MainAnalysis[woven].md
+/MainAnalysis[woven].md
+/MainAnalysis[woven].md
+/MainAnalysis[woven].md
+/MainAnalysis[woven].md
+/SmallScripts/#2_MNCH.r#
+/SmallScripts/#4_Expenditure.r#
+/SmallScripts/.#2_MNCH.r
+/SmallScripts/.#4_Expenditure.r
+/SmallScripts/2_1_OOP_Correlation.r~
+/SmallScripts/4_Performance_of_the_HEF_and_Free_MNCH_schemes.r~
+/SmallScripts/5_PCA.r~
+/SmallScripts/CleanCosts.r~
+/SmallScripts/CostIndividualsCare.r~
+/SmallScripts/FreqTables.r~
+/SmallScripts/PCA2.r~
+/Suspect_Lines_Q1_DH.csv
+/Suspect_Lines_Q1_HC.csv
+/Suspect_Lines_Q1_HV.csv
+/Suspect_Lines_Q1_NH.csv
+/Suspect_Lines_Q1_PC.csv
+/Suspect_Lines_Q1_PH.csv
+/Suspect_Lines_Q1_PP.csv
+/Suspect_Lines_Q1_TH.csv
+/Suspect_Lines_Q2_DH.csv
+/Suspect_Lines_Q2_HC.csv
+/Suspect_Lines_Q2_HV.csv
+/Suspect_Lines_Q2_NH.csv
+/Suspect_Lines_Q2_PC.csv
+/Suspect_Lines_Q2_PH.csv
+/Suspect_Lines_Q2_PP.csv
+/Suspect_Lines_Q2_TH.csv
+/Suspect_Lines_Q3_DH.csv
+/Suspect_Lines_Q3_HC.csv
+/Suspect_Lines_Q3_HV.csv
+/Suspect_Lines_Q3_NH.csv
+/Suspect_Lines_Q3_PC.csv
+/Suspect_Lines_Q3_PH.csv
+/Suspect_Lines_Q3_PP.csv
+/Suspect_Lines_Q3_TH.csv
+/figure/
+/output/
+/tex/
+/OOPCross_Anlysis.md
+/CostAnalysis.html
+/MNCH_Analysis.html
+/OOPCross_Anlysis.html
+/UsageAnalysis.html
