--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,14 @@
 /UsageAnalysis.html
 /SmallScripts/FormatIndi.r~
 /html/HEF_Analysis_20150615.zip
+/.directory
+/Constants/#ColNames.csv#
+/CostAnalysis_cache/
+/MNCHQuestions_cache/
+/MNCH_Analysis_cache/
+/OOPCross_Anlysis_cache/
+/Village Size.png
+/html/CostAnalysis_files/
+/html/MNCH_Analysis_files/
+/html/OOPCross_Anlysis_2015062201.html
+/html/OOPCross_Anlysis_2015062301.html
