Finished Model and Cost sums for baseline report
* .gitignore:

--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,19 @@
 /html/OOPCross_Anlysis_files/figure-html/unnamed-chunk-6-5.png
 /html/OOPCross_Anlysis_files/figure-html/unnamed-chunk-6-6.png
 /html/OOPCross_Anlysis_files/figure-html/unnamed-chunk-62-2.png
+/Analysis/Baseline Report2016070101.docx
+/Analysis/Baseline Report2016070201.docx
+/Data/villages3.csv
+/Data/Vilages2.csv
+/GeoIDSampling.png
+/ModelCosts_cache/
+/NonGeoIDSampling.png
+/SmallScripts/#MNCH_score.r#
+/SmallScripts/#PCA2.r#
+/SmallScripts/#ReportFigs.r#
+/SmallScripts/ComputeCosts.r~
+/SmallScripts/OOPPlots.r~
+/SmallScripts/Villages.r
+/SmallScripts/Villages.r~
+/html/.directory
+/html/ModelCosts_files/
